--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,24 @@ services:
     env_file:
       - blogify-back/.env
 
+  react:
+    container_name: react
+    build: ./blogify-front
+    volumes:
+      - react-volume:/var/www/html
+
+  nginx:
+    container_name: nginx_app
+    build: ./nginx
+    ports:
+      - 8080:80
+    volumes:
+      - react-volume:/var/www/html
+    depends_on:
+      - postgres
+      - node
+      - react
+
 volumes:
   postgres-volume:
+  react-volume:
