--- a/blogify-back/package.json
+++ b/blogify-back/package.json
@@ -11,7 +11,7 @@
     "prisma:migrate:deploy": "prisma migrate deploy",
     "lint": "eslint . --fix",
     "lint:staged": "lint-staged",
-    "test": "dotenv -e .env.test npm run prisma:migrate:deploy && wait && dotenv -e .env.test jest -- --runInBand --passWithNoTests",
+    "test": "dotenv -e .env.test npm run prisma:migrate:deploy && prisma db seed && wait && dotenv -e .env.test jest -- --runInBand --passWithNoTests",
     "test:coverage": "cross-env NODE_ENV=test jest --passWithNoTests --runInBand --coverage --collectCoverageFrom='./src/**'",
     "test:migration:run": "npm run test:load-envs prisma migrate deploy",
     "test:migration:generate": "npm run test:load-envs prisma migrate dev",
